# CombaC.

./: CMakeLists.txt  main.cpp
